--- a/Datos/Datos.csproj
+++ b/Datos/Datos.csproj
@@ -43,6 +43,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClienteDatos.cs" />
+    <Compile Include="FacturaDatos.cs" />
+    <Compile Include="FacturaDetalleDatos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
