--- a/Presentacion/Presentacion.csproj
+++ b/Presentacion/Presentacion.csproj
@@ -216,6 +216,7 @@
     <Content Include="wfBase.aspx" />
     <Content Include="wfEditarCliente.aspx" />
     <Content Include="wfEliminarCliente.aspx" />
+    <Content Include="wfFactura.aspx" />
     <Content Include="wfGrid.aspx" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\ai.0.22.9-build00167.js" />
@@ -452,6 +453,13 @@
     </Compile>
     <Compile Include="wfEliminarCliente.aspx.designer.cs">
       <DependentUpon>wfEliminarCliente.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="wfFactura.aspx.cs">
+      <DependentUpon>wfFactura.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="wfFactura.aspx.designer.cs">
+      <DependentUpon>wfFactura.aspx</DependentUpon>
     </Compile>
     <Compile Include="wfGrid.aspx.cs">
       <DependentUpon>wfGrid.aspx</DependentUpon>
