--- a/Presentacion/Presentacion.csproj
+++ b/Presentacion/Presentacion.csproj
@@ -77,6 +77,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.ReportViewer.WebForms, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -217,6 +218,7 @@
     <Content Include="wfProductoActualizar.aspx" />
     <Content Include="wfProductoEliminar.aspx" />
     <Content Include="wfProductoInsertar.aspx" />
+    <Content Include="wfProductoReporte.aspx" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\ai.0.22.9-build00167.js" />
     <Content Include="Scripts\ai.0.22.9-build00167.min.js" />
@@ -460,6 +462,13 @@
     <Compile Include="wfProductoInsertar.aspx.designer.cs">
       <DependentUpon>wfProductoInsertar.aspx</DependentUpon>
     </Compile>
+    <Compile Include="wfProductoReporte.aspx.cs">
+      <DependentUpon>wfProductoReporte.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="wfProductoReporte.aspx.designer.cs">
+      <DependentUpon>wfProductoReporte.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -477,6 +486,9 @@
       <Project>{5704ee7c-8823-4bae-bb67-c3d65e51034e}</Project>
       <Name>Negocio</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="rptProducto.rdlc" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
