--- a/Presentacion/bin/Presentacion.dll.config
+++ b/Presentacion/bin/Presentacion.dll.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"?>
 <!--
   Para obtener más información sobre cómo configurar la aplicación de ASP.NET, visite
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -13,8 +13,21 @@
     <add name="BD_EvaluacionEntities" connectionString="metadata=res://*/Conexion.csdl|res://*/Conexion.ssdl|res://*/Conexion.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=172.16.3.22;initial catalog=BD_Evaluacion;persist security info=True;user id=adminuca;password=Sistemasuca2014++;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web>
+    <httpHandlers>
+      <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"
+        validate="false" />
+    </httpHandlers>
     <authentication mode="None" />
-    <compilation debug="true" targetFramework="4.5.2" />
+    <compilation debug="true" targetFramework="4.5.2">
+      <assemblies>
+        <add assembly="Microsoft.ReportViewer.WebForms, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
+        <add assembly="Microsoft.ReportViewer.Common, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
+        <add assembly="Microsoft.Build.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
+      </assemblies>
+      <buildProviders>
+        <add extension=".rdlc" type="Microsoft.Reporting.RdlBuildProvider, Microsoft.ReportViewer.WebForms, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
+      </buildProviders>
+    </compilation>
     <httpRuntime targetFramework="4.5.2" />
     <pages>
       <namespaces>
@@ -28,7 +41,7 @@
     <membership>
       <providers>
         <!--
-	      El proveedor de pertenencia de ASP.NET está deshabilitado en esta plantilla. Visite el vínculo siguiente http://go.microsoft.com/fwlink/?LinkId=301889 para obtener información sobre la compatibilidad con la pertenencia a ASP.NET en esta plantilla
+        El proveedor de pertenencia de ASP.NET está deshabilitado en esta plantilla. Visite el vínculo siguiente http://go.microsoft.com/fwlink/?LinkId=301889 para obtener información sobre la compatibilidad con la pertenencia a ASP.NET en esta plantilla
         -->
         <clear />
       </providers>
@@ -36,14 +49,14 @@
     <profile>
       <providers>
         <!--
-	      El perfil de pertenencia de ASP.NET está deshabilitado en esta plantilla. Visite el vínculo siguiente http://go.microsoft.com/fwlink/?LinkId=301889 para obtener información sobre la compatibilidad con la pertenencia a ASP.NET en esta plantilla
+        El perfil de pertenencia de ASP.NET está deshabilitado en esta plantilla. Visite el vínculo siguiente http://go.microsoft.com/fwlink/?LinkId=301889 para obtener información sobre la compatibilidad con la pertenencia a ASP.NET en esta plantilla
         -->
         <clear />
       </providers>
     </profile>
     <roleManager>
       <!--
-	        La gestión de roles del sistema de pertenencia de ASP.NET está deshabilitada en esta plantilla. Visite el vínculo siguiente http://go.microsoft.com/fwlink/?LinkId=301889 para obtener información sobre la compatibilidad con la pertenencia a ASP.NET en esta plantilla
+          La gestión de roles del sistema de pertenencia de ASP.NET está deshabilitada en esta plantilla. Visite el vínculo siguiente http://go.microsoft.com/fwlink/?LinkId=301889 para obtener información sobre la compatibilidad con la pertenencia a ASP.NET en esta plantilla
         -->
       <providers>
         <clear />
@@ -71,6 +84,9 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
+    <handlers>
+      <add name="ReportViewerWebControlHandler" preCondition="integratedMode" verb="*" path="Reserved.ReportViewerWebControl.axd" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
+    </handlers>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
