Se crea mètodo actualizar usuario en la capa de datos

--- a/Presentacion/Web.config
+++ b/Presentacion/Web.config
@@ -71,6 +71,8 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
+    
+    
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -120,4 +122,17 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IServiciosUca" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://webservices.uca.edu.ni:8081/ServiciosUca.svc"
+          binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IServiciosUca"
+          contract="ServiciosUCA.IServiciosUca" name="BasicHttpBinding_IServiciosUca" />
+    </client>
+  </system.serviceModel>
+  
 </configuration>
