se creo el formulario de maestro detalle factura se modifico la presentacion con el drownlist

--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ClienteNegocio.cs" />
     <Compile Include="FacturaDetalleNegocio.cs" />
     <Compile Include="FacturaNegocio.cs" />
+    <Compile Include="ProductoNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
