--- a/Datos/Datos.csproj
+++ b/Datos/Datos.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ClienteDatos.cs" />
     <Compile Include="FacturaDatos.cs" />
     <Compile Include="FacturaDetalleDatos.cs" />
+    <Compile Include="ProductoDatos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
