--- a/Presentacion/Web.config
+++ b/Presentacion/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0"?>
 <!--
   Para obtener más información sobre cómo configurar la aplicación de ASP.NET, visite
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -9,10 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-<<<<<<< HEAD
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Presentacion-20170502112051.mdf;Initial Catalog=aspnet-Presentacion-20170502112051;Integrated Security=True" providerName="System.Data.SqlClient" />
-=======
->>>>>>> bfb342136a09d91ccdb5342b479bde55e80003bf
     <add name="BD_EvaluacionEntities" connectionString="metadata=res://*/Conexion.csdl|res://*/Conexion.ssdl|res://*/Conexion.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=172.16.3.22;initial catalog=BD_Evaluacion;persist security info=True;user id=adminuca;password=Sistemasuca2014++;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web>
