--- a/Datos/Datos.csproj
+++ b/Datos/Datos.csproj
@@ -47,6 +47,7 @@
     <Compile Include="FacturaDatos.cs" />
     <Compile Include="FacturaDetalleDatos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UsuarioDatos.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Entidad\Entidad.csproj">
