--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -47,6 +47,7 @@
     <Compile Include="FacturaDetalleNegocio.cs" />
     <Compile Include="FacturaNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UsuarioNegocio.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Datos\Datos.csproj">
